ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node
            port:
              number: 80
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: nginx-app
            port:
              number: 80
      - path: /auth/
        pathType: Prefix
        backend:
          service:
            name: nginx-auth
            port:
              number: 80
